--- a/package.json
+++ b/package.json
@@ -19,16 +19,20 @@
     "@tailwindcss/vite": "^4.1.13",
     "@vueuse/core": "^13.9.0",
     "@vueuse/nuxt": "^13.9.0",
+    "clsx": "^2.1.1",
     "effect": "^3.17.13",
     "nuxt": "^4.1.1",
     "nuxt-security": "^2.4.0",
     "reka-ui": "^2.5.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
+    "tw-animate-css": "^1.3.8",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.3.0",
+    "eslint": "^9.35.0",
     "eslint-plugin-better-tailwindcss": "^3.7.8",
     "eslint-plugin-format": "^1.0.1"
   }
