--- a/package.json
+++ b/package.json
@@ -28,12 +28,17 @@
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.3.8",
     "vue": "^3.5.21",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.3.0",
+    "@effect/language-service": "^0.40.0",
+    "@types/node": "^24.5.0",
     "eslint": "^9.35.0",
     "eslint-plugin-better-tailwindcss": "^3.7.8",
-    "eslint-plugin-format": "^1.0.1"
+    "eslint-plugin-format": "^1.0.1",
+    "orval": "^7.11.2",
+    "typescript": "^5.9.2"
   }
 }
