chore: edit vscode workspace settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,6 @@
     "pcss",
     "postcss"
   ],
-  "iconify.inplace": false
+  "iconify.inplace": false,
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
