--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "concurrently \"nuxt dev\" \"minio server ./.minio\" -r",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^5.3.0",
     "@types/node": "^24.5.0",
+    "concurrently": "^9.2.1",
     "eslint": "^9.35.0",
     "eslint-plugin-better-tailwindcss": "^3.7.8",
     "eslint-plugin-format": "^1.0.1",
