--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "minio": "^8.0.6",
     "nuxt": "^4.1.1",
+    "nuxt-auth-utils": "0.5.25",
     "nuxt-security": "^2.4.0",
     "p-limit": "^7.1.1",
     "reka-ui": "^2.5.0",
