--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@tailwindcss/vite": "^4.1.13",
     "@vueuse/core": "^13.9.0",
     "@vueuse/nuxt": "^13.9.0",
+    "@vueuse/router": "^13.9.0",
     "browser-id3-writer": "^6.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "minio": "^8.0.6",
+    "motion-v": "^1.7.1",
     "nuxt": "^4.1.1",
     "nuxt-auth-utils": "0.5.25",
     "nuxt-security": "^2.4.0",
