--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.3.0",
+    "@iconify-json/mingcute": "^1.2.5",
     "@types/node": "^24.5.0",
     "concurrently": "^9.2.1",
     "eslint": "^9.35.0",
