--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "tw-animate-css": "^1.3.8",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1",
+    "yazl": "^3.3.1",
     "zod": "^4.1.8"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.3.0",
     "@iconify-json/mingcute": "^1.2.5",
     "@types/node": "^24.5.0",
+    "@types/yazl": "^3.3.0",
     "concurrently": "^9.2.1",
     "eslint": "^9.35.0",
     "eslint-plugin-better-tailwindcss": "^3.7.8",
