--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "browser-id3-writer": "^6.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "focus-trap": "^7.6.5",
     "minio": "^8.0.6",
     "motion-v": "^1.7.1",
     "nuxt": "^4.1.1",
